--- a/GlobalAssessment/NPP_timeseries.ipynb
+++ b/GlobalAssessment/NPP_timeseries.ipynb
@@ -150,7 +150,7 @@
     "        else:\n",
     "            Vdet1 = 0.0288 * 100. + 20. ## sinking velocity\n",
     "            if secdet_path.is_file():\n",
-    "                Vdet2 = 0.0288 * 100. + 200. ## sinking velocity\n",
+    "                Vdet2 = 200. ## sinking velocity\n",
     "                        \n",
     "        if cram_path.is_file():\n",
     "            print('shape DetC1: ',np.shape(DetC1))\n",
