create functions within pythons scripts for module transformation

--- a/GlobalAssessment/04_ECO.ipynb
+++ b/GlobalAssessment/04_ECO.ipynb
@@ -43,7 +43,9 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "IPython.notebook.set_autosave_interval(5000)"
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(5000)"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -375,9 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 4.1.6 Maredat Biomass maps <a class=\"anchor\" id=\"MAREDAT\"></a>"
    ]
@@ -545,18 +545,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 4.1.7 Limiting Factors <a class=\"anchor\" id=\"LIMFACT\"></a>"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
+   "outputs": [],
    "source": [
     "!jupyter nbconvert --to=python LIMfactors.ipynb\n",
     "!jupyter nbconvert --to=python load_interp_WOA.ipynb\n",
@@ -568,9 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 4.2 Latitudinal distributions<a class=\"anchor\" id=\"LATPP\"></a>"
    ]
@@ -741,7 +739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
